--- a/index.html
+++ b/index.html
@@ -44,31 +44,86 @@
             <div class="investing__wall">
                 <div class="investing__text">
                     <div class="investing__title">
-                        Инвестируйте в контейнеры от 5 000 € с возвратом 15-17% в год
+                        Инвестируйте <br> в контейнеры от 5 000 €<br> с возвратом 15-17% в год
                     </div>
                     <div class="investing__block">
                         <div class="investing__item">
-                            <img src="" alt="" class="invesing__img">
-                            <div class="investing__descr">Физический контейнер в Вашей собственности</div>
+                            <img src="img/investing/list.svg" alt="listImg" class="investing__img">
+                            <div class="investing__descr ml34">Физический контейнер в Вашей собственности</div>
                         </div>
                         <div class="investing__item">
-                            <img src="" alt="" class="invesing__img">
-                            <div class="investing__descr">Инвестируйте в компанию которая имеет 200+ активных
+                            <img src="img/investing/money.svg" alt="moneyBagImg" class="investing__img">
+                            <div class="investing__descr ml32">Инвестируйте в компанию которая имеет 200+ активных
                                 арендаторов и управляет активами в размере 300 000 € +</div>
                         </div>
                         <div class="investing__item">
-                            <img src="" alt="" class="invesing__img">
-                            <div class="investing__descr">Средняя заполняемость складов выше 85%*</div>
+                            <img src="img/investing/kupon.svg" alt="kuponImg" class="investing__img">
+                            <div class="investing__descr ml20">Средняя заполняемость складов выше 85%*</div>
                         </div>
                     </div>
                     <a href="#" class="investing__btn">
                         Получить коммерческое предложение
                     </a>
                 </div>
+                <img src="img/investing/box.png" alt="boxRent" class="rentBox">
             </div>
             </div>
         <div class="background">
             <img src="img/bg.png" alt="bg">
+        </div>
+        
+    </section>
+
+    <section class="profit">
+        <div class="container">
+            <div class="profit__title">
+                Рассчитайте свою прибыль!
+            </div>
+            <div class="profit__blocks">
+                <div class="profit__block">
+                    <div class="profit__block-descr">Ваша инвестиция</div>
+                    <div class="profit__block-value">10 000 €</div>
+                    <div class="profit__block-snake">
+                        <div class="profit__block-snake-line">
+                            <div class="profit__block-snake-line_left">5 000 €</div>
+                            <div class="profit__block-snake-line_right">50 000 €+</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="profit__block">
+                    <div class="profit__block-descr">В вашей собственности</div>
+                    <div class="profit__block-value">2 контейнера</div>
+                    <div class="profit__block-snake">
+                        <div class="profit__block-snake-line">
+                            <div class="profit__block-snake-line_left">1 конт.</div>
+                            <div class="profit__block-snake-line_right">10 конт. +</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="profit__block">
+                    <div class="profit__block-descr">Ваш возврат</div>
+                    <div class="profit__block-value">15.5 %</div>
+                    <div class="profit__block-snake">
+                        <div class="profit__block-snake-line">
+                            <div class="profit__block-snake-line_left">15%</div>
+                            <div class="profit__block-snake-line_right">17%</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="profit__block profit__total greyBlock">
+                    <div class="profit__total-descr">Ваш пассивный доход</div>
+                    <div class="profit__total-wall">
+                        <div class ="profit__total-together">
+                            <div class="profit__total-month">В месяц:</div>
+                            <div class="profit__total-value">129 €</div>
+                        </div>
+                        <div class="profit__total-together mt30">
+                            <div class="profit__total-year">В год:</div>
+                            <div class="profit__total-value">1 550 €</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
