--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <div class="profit__block">
-                    <div class="profit__block-descr">В вашей собственности</div>
+                    <div class="profit__block-descr"><div>В вашей собственности</div></div>
                     <div class="profit__block-value">2 контейнера</div>
                     <div class="profit__block-snake">
                         <div class="profit__block-snake-line">
