snake in process

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="profit__blocks">
                 <div class="profit__block">
                     <div class="profit__block-descr">Ваша инвестиция</div>
-                    <div class="profit__block-value">10 000 €</div>
+                    <div class="profit__block-value"><div>10 000 €</div></div>
                     <div class="profit__block-snake">
                         <div class="profit__block-snake-line">
                             <div class="profit__block-snake-line_left">5 000 €</div>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="profit__block">
                     <div class="profit__block-descr"><div>В вашей собственности</div></div>
-                    <div class="profit__block-value">2 контейнера</div>
+                    <div class="profit__block-value"><div>2 контейнера</div></div>
                     <div class="profit__block-snake">
                         <div class="profit__block-snake-line">
                             <div class="profit__block-snake-line_left">1 конт.</div>
@@ -102,7 +102,7 @@
                 </div>
                 <div class="profit__block">
                     <div class="profit__block-descr">Ваш возврат</div>
-                    <div class="profit__block-value">15.5 %</div>
+                    <div class="profit__block-value"><div>15.5 %</div></div>
                     <div class="profit__block-snake">
                         <div class="profit__block-snake-line">
                             <div class="profit__block-snake-line_left">15%</div>
