profit section is done and question section is begin

--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
         <div class="background">
             <img src="img/bg.png" alt="bg">
         </div>
-        
     </section>
 
     <section class="profit">
@@ -85,6 +84,9 @@
                     <div class="profit__block-value"><div>10 000 €</div></div>
                     <div class="profit__block-snake">
                         <div class="profit__block-snake-line">
+                            <img src="img/profit/ellipse.svg" alt="ellipse">
+                        </div>
+                        <div class="profit__block-snake-line-text">
                             <div class="profit__block-snake-line_left">5 000 €</div>
                             <div class="profit__block-snake-line_right">50 000 €+</div>
                         </div>
@@ -95,16 +97,25 @@
                     <div class="profit__block-value"><div>2 контейнера</div></div>
                     <div class="profit__block-snake">
                         <div class="profit__block-snake-line">
+                            <img src="img/profit/ellipse.svg" alt="ellipse">
+                        </div>
+                        <div class="profit__block-snake-line-text">
                             <div class="profit__block-snake-line_left">1 конт.</div>
                             <div class="profit__block-snake-line_right">10 конт. +</div>
                         </div>
                     </div>
                 </div>
                 <div class="profit__block">
-                    <div class="profit__block-descr">Ваш возврат</div>
+                    <div class="profit__block-descr width122">
+                        <a href="#" class="profit__block-descr-tm"></a>
+                        Ваш возврат
+                    </div>
                     <div class="profit__block-value"><div>15.5 %</div></div>
                     <div class="profit__block-snake">
                         <div class="profit__block-snake-line">
+                            <img src="img/profit/ellipse.svg" alt="ellipse">
+                        </div>
+                        <div class="profit__block-snake-line-text">
                             <div class="profit__block-snake-line_left">15%</div>
                             <div class="profit__block-snake-line_right">17%</div>
                         </div>
@@ -121,6 +132,32 @@
                             <div class="profit__total-year">В год:</div>
                             <div class="profit__total-value">1 550 €</div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="question">
+        <div class="container">
+            <div class="question__blocks">
+                <div class="question__block">
+                    <div class="question__block-img">
+                        <img src="img/question/main.png" alt="questionImg">
+                    </div>
+                </div>
+                <div class="question__block">
+                    <div class="question__block-text">
+                        <div class="question__title">Чем занимается
+                            Boxrent ?</div>
+                        <div class="question__subtitle">Мы управляющая компания. Мы строим<br>
+                            склады из<br>
+                            морских контейнеров и сдаем<br>
+                            в короткий и долгий срок.</div>
+                        <div class="question__subtitle">Мы открыли первую локацию в Риге 06.2020 <br>
+                            и за 2 года вырасли до одной из лидирующих<br>
+                            компаний в Балтии по хранению вещей<br>
+                            в контейнерах.</div>
                     </div>
                 </div>
             </div>
