question section is done

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BoxRent</title>
+    
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -150,14 +151,17 @@
                     <div class="question__block-text">
                         <div class="question__title">Чем занимается
                             Boxrent ?</div>
-                        <div class="question__subtitle">Мы управляющая компания. Мы строим<br>
-                            склады из<br>
-                            морских контейнеров и сдаем<br>
-                            в короткий и долгий срок.</div>
-                        <div class="question__subtitle">Мы открыли первую локацию в Риге 06.2020 <br>
-                            и за 2 года вырасли до одной из лидирующих<br>
-                            компаний в Балтии по хранению вещей<br>
-                            в контейнерах.</div>
+                        <div class="question__subtitles">
+                            <div class="question__subtitle">Мы управляющая компания. Мы строим<br>
+                                склады из морских контейнеров и сдаем<br>
+                                в короткий и долгий срок.
+                            </div>
+                            <div class="question__subtitle">Мы открыли первую локацию в Риге 06.2020 <br>
+                                и за 2 года вырасли до одной из лидирующих<br>
+                                компаний в Балтии по хранению вещей<br>
+                                в контейнерах.
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
