dynamic section in progress

--- a/index.html
+++ b/index.html
@@ -167,5 +167,67 @@
             </div>
         </div>
     </section>
+
+    <section class="dynamic">
+        <div class="container">
+            <div class="dynamic__title">
+                Динамика развития
+            </div>
+            <div class="dynamic__blocks">
+                <div class="dynamic__block">
+                    <div class="dynamic__block-img">
+                        <img src="img/dynamic/1.svg" alt="1container">
+                    </div>
+                    <div class="dynamic__block-text">
+                        <div class="dynamic__block-date">05. 2020</div>
+                        <div class="dynamic__block-subtitles">
+                            <div class="dynamic__block-subtitle">1 контейнер</div>
+                            <div class="dynamic__block-subtitle">6 клиентов</div>
+                        </div>
+                        <div class="dynamic__block-location">Рига</div>
+                    </div>
+                </div>
+                <div class="dynamic__block">
+                    <div class="dynamic__block-img">
+                        <img src="img/dynamic/3.svg" alt="3containers">
+                    </div>
+                    <div class="dynamic__block-text">
+                        <div class="dynamic__block-date">05. 2021</div>
+                        <div class="dynamic__block-subtitles">
+                            <div class="dynamic__block-subtitle">20 контейнер</div>
+                            <div class="dynamic__block-subtitle">90 клиентов</div>
+                        </div>
+                        <div class="dynamic__block-location">Рига</div>
+                    </div>
+                </div>
+                <div class="dynamic__block">
+                    <div class="dynamic__block-img">
+                        <img src="img/dynamic/6.svg" alt="6containers">
+                    </div>
+                    <div class="dynamic__block-text">
+                        <div class="dynamic__block-date">04. 2022</div>
+                        <div class="dynamic__block-subtitles">
+                            <div class="dynamic__block-subtitle">58 контейнеров</div>
+                            <div class="dynamic__block-subtitle">200+ клиентов</div>
+                        </div>
+                        <div class="dynamic__block-location">Рига | Вильнюс</div>
+                    </div>
+                </div>
+                <div class="dynamic__block">
+                    <div class="dynamic__block-img">
+                        <img src="img/dynamic/6.svg" alt="9containers">
+                    </div>
+                    <div class="dynamic__block-text">
+                        <div class="dynamic__block-date">05. 2023</div>
+                        <div class="dynamic__block-subtitles">
+                            <div class="dynamic__block-subtitle">200 контейнер</div>
+                            <div class="dynamic__block-subtitle">1000 клиентов</div>
+                        </div>
+                        <div class="dynamic__block-location">Рига | Вильнюc <br>| Каунас | Таплин</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
