--- a/index.html
+++ b/index.html
@@ -350,5 +350,67 @@
             </div>
         </div>
     </section>
+
+    <section class="location">
+        <div class="container">
+            <div class="location__title">
+                Наши контейнеры расположены <br>
+                в 8 разных локаций
+            </div>
+            <div class="location__blocks">
+                <div class="location__block">
+                    <img src="img/location/firstMap.png" alt="firstMap" class="location__img">
+                </div>
+                <div class="location__block">
+                    <img src="img/location/secondMap.png" alt="secondMap" class="location__img">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="why">
+        <div class="container">
+            <div class="why__title">
+                Почему нас выбрали<br>уже более 200 клиентов?
+            </div>
+            <div class="why__mobile">
+                <div class="why__blocks">
+                    <div class="why__block">
+                        <div class="why__item">
+                            <img src="img/whySection/water.svg" alt="water" class="why__icon">
+                            <div class="why__descr">Сухо и герметично</div>
+                        </div>
+                        <div class="why__item">
+                            <img src="img/whySection/car.svg" alt="car" class="why__icon">
+                            <div class="why__descr">Удобный подьезд</div>
+                        </div>
+                        <div class="why__item">
+                            <img src="img/whySection/flash.svg" alt="flash" class="why__icon">
+                            <div class="why__descr">Электричество<br>и освещение</div>
+                        </div>
+                        <div class="why__item">
+                            <img src="img/whySection/euro.png" alt="euro" class="why__icon">
+                            <div class="why__descr">Выгодно</div>
+                        </div>
+                    </div>
+                    <div class="why__block">
+                        <div class="why__item">
+                            <div class="why__descr">Безопасно</div>
+                            <img src="img/whySection/shield.svg" alt="shield" class="why__icon">
+                        </div>
+                        <div class="why__item">                           
+                            <div class="why__descr">Доступ 24/7</div>
+                            <img src="img/whySection/clock.svg" alt="clock" class="why__icon">
+                        </div>
+                        <div class="why__item">
+                            <div class="why__descr">Видеонаблюдение<br>и физическая охрана</div>
+                            <img src="img/whySection/camera.svg" alt="camera" class="why__icon">
+                        </div>
+                    </div>
+                </div>
+                <img src="img/whySection/mobile.png" alt="mobile" class="why__bigMobile">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
