whySection is progress

--- a/index.html
+++ b/index.html
@@ -394,17 +394,20 @@
                         </div>
                     </div>
                     <div class="why__block">
-                        <div class="why__item">
-                            <div class="why__descr">Безопасно</div>
-                            <img src="img/whySection/shield.svg" alt="shield" class="why__icon">
+                        <div class="why__item why__itemReverse">
+                            <div class="why__descr why__descrReverse">Безопасно</div>
+                            <img src="img/whySection/shield.svg" alt="shield" class="why__iconReverse">
                         </div>
-                        <div class="why__item">                           
-                            <div class="why__descr">Доступ 24/7</div>
-                            <img src="img/whySection/clock.svg" alt="clock" class="why__icon">
+                        <div class="why__item why__itemReverse">                           
+                            <div class="why__descr why__descrReverse">Доступ 24/7</div>
+                            <a href="#" class="why__link">
+                                <img src="img/whySection/what.png" alt="what">
+                            </a>
+                            <img src="img/whySection/clock.svg" alt="clock" class="why__iconReverse">
                         </div>
-                        <div class="why__item">
-                            <div class="why__descr">Видеонаблюдение<br>и физическая охрана</div>
-                            <img src="img/whySection/camera.svg" alt="camera" class="why__icon">
+                        <div class="why__item why__itemReverse">
+                            <div class="why__descr why__descrReverse">Видеонаблюдение<br>и физическая охрана</div>
+                            <img src="img/whySection/camera.svg" alt="camera" class="why__iconReverse">
                         </div>
                     </div>
                 </div>
