whySection is done boxRentSection is done

--- a/index.html
+++ b/index.html
@@ -415,5 +415,21 @@
             </div>
         </div>
     </section>
+
+    <section class="boxRent">
+        <div class="container">
+            <div class="boxRent__title">Контейнер <span>Boxrent</span> - отличное
+                решение для хранения вещей</div>
+            <div class="boxRent__items">
+                <img src="img/boxRent/container.png" alt="container" class="boxRent__img">
+                <a href="#" class="boxRent__item boxRent__item_1"></a>
+                <a href="#" class="boxRent__item boxRent__item_2"></a>
+                <a href="#" class="boxRent__item boxRent__item_3"></a>
+                <a href="#" class="boxRent__item boxRent__item_4"></a>
+                <a href="#" class="boxRent__item boxRent__item_5"></a>
+                <a href="#" class="boxRent__item boxRent__item_6"></a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
