howWeWork section is done calcilation section is done

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <div class="investing__descr ml20">Средняя заполняемость складов выше 85%*</div>
                         </div>
                     </div>
-                    <a href="#" class="investing__btn">
+                    <a href="#" class="btn">
                         Получить коммерческое предложение
                     </a>
                 </div>
@@ -429,6 +429,198 @@
                 <a href="#" class="boxRent__item boxRent__item_5"></a>
                 <a href="#" class="boxRent__item boxRent__item_6"></a>
             </div>
+        </div>
+    </section>
+
+    <section class="howwework">
+        <div class="container">
+            <div class="howwework__title">Как мы работаем?</div>
+            <div class="howwework__blocks">
+                <div class="howwework__block">
+                    <div class="howwework__together">
+                        <div class="howwework__step">ШАГ №1</div>
+                        <img src="img/howWeWorkSection/arrow.svg" alt="arrow" class="howwework__arrow">
+                    </div>
+                    <img src="img/howWeWorkSection/1card.svg" alt="1card" class="howwework__img">
+                    <div class="howwework__block_title">
+                        Анализ рынка<br>и тестирование<br>спроса
+                    </div>
+                    <div class="howwework__block_subtitle">
+                        Перед открытием новой<br>локации, мы ее тщательно<br>анализируем, а также<br>тестируем реальный спрос
+                    </div>
+                    <a href="#" class="howwewok__waterMarkLink">
+                        <img src="img/howWeWorkSection/what.svg" alt="whatIcon" class="howwework__waterMark howwework__waterMark_1">
+                    </a>
+                </div>
+                <div class="howwework__block">
+                    <div class="howwework__together">
+                        <div class="howwework__step">ШАГ №2</div>
+                        <img src="img/howWeWorkSection/arrow.svg" alt="arrow" class="howwework__arrow">
+                    </div>
+                    <img src="img/howWeWorkSection/2card.svg" alt="2card" class="howwework__img">
+                    <div class="howwework__block_title">
+                        Поиск<br>территории
+                    </div>
+                    <div class="howwework__block_subtitle">
+                        Мы ищем землю<br>в выбранных районах<br>и заключаем долгосрочный<br>договор аренды от ≈ 2 до 5 лет
+                    </div>
+                    <a href="#" class="howwework__link">
+                        У вас есть территория?
+                    </a>
+                    <a href="#" class="howwewok__waterMarkLink">
+                        <img src="img/howWeWorkSection/what.svg" alt="whatIcon" class="howwework__waterMark howwework__waterMark_2">
+                    </a>
+                </div>
+                <div class="howwework__block">
+                    <div class="howwework__together">
+                        <div class="howwework__step">ШАГ №3</div>
+                        <img src="img/howWeWorkSection/arrow.svg" alt="arrow" class="howwework__arrow">
+                    </div>
+                    <img src="img/howWeWorkSection/3card.svg" alt="3card" class="howwework__img">
+                    <div class="howwework__block_title">
+                        Предложение<br>инвесторам
+                    </div>
+                    <div class="howwework__block_subtitle">
+                        Рассылаем актуальное<br>предложение инвесторам<br>по входу в новую локацию
+                    </div>
+                </div>
+                <div class="howwework__block">
+                    <div class="howwework__together">
+                        <div class="howwework__step">ШАГ №4</div>
+                        <img src="img/howWeWorkSection/arrow.svg" alt="arrow" class="howwework__arrow">
+                    </div>
+                    <img src="img/howWeWorkSection/4card.svg" alt="4card" class="howwework__img">
+                    <div class="howwework__block_title">
+                        Производство<br>складов
+                    </div>
+                    <div class="howwework__block_subtitle">
+                        Изготовления дверей,<br> поставка и переоборудования<br>контейнеров как правило занимает до 30 дней
+                    </div>
+                </div>
+                <div class="howwework__block">
+                    <div class="howwework__together">
+                        <div class="howwework__step">ШАГ №5</div>
+                        <!-- <img src="img/howWeWorkSection/arrow.svg" alt="arrow" class="howwework__arrow"> -->
+                    </div>
+                    <img src="img/howWeWorkSection/5card.svg" alt="5card" class="howwework__img">
+                    <div class="howwework__block_title">
+                        Маркетинг
+                    </div>
+                    <div class="howwework__block_subtitle">
+                        Паралельно производству<br>начинаем рекламировать<br>новую локацию. Мы используем<br>все возможные ресурсы<br>для привлечения новых<br>клиентов
+                    </div>
+                </div>
+                <div class="howwework__block">
+                    <div class="howwework__together">
+                        <div class="howwework__step">ШАГ №6</div>
+                        <img src="img/howWeWorkSection/arrow.svg" alt="arrow" class="howwework__arrow">
+                    </div>
+                    <img src="img/howWeWorkSection/6card.svg" alt="6card" class="howwework__img">
+                    <div class="howwework__block_title">
+                        Заполнения новых<br>контейнеров
+                    </div>
+                    <div class="howwework__block_subtitle">
+                        В зависимости от количеств<br>контейнеров, в среднем<br>первую группу контейнеров<br>заполняем до 75% за 45 дней 
+                    </div>
+                </div>
+                <div class="howwework__block">
+                    <div class="howwework__together">
+                        <div class="howwework__step">ШАГ №7</div>
+                        <img src="img/howWeWorkSection/arrow.svg" alt="arrow" class="howwework__arrow">
+                    </div>
+                    <img src="img/howWeWorkSection/7card.svg" alt="7card" class="howwework__img">
+                    <div class="howwework__block_title">
+                        Выплата процентов<br>инвесторам
+                    </div>
+                    <div class="howwework__block_subtitle">
+                        Инвестор начинает<br>получать<br>проценты<br>уже за второй месяц<br>работы вне зависимости<br>от заполняемости наших<br>контейнеров!
+                    </div>
+                    <a href="#" class="howwewok__waterMarkLink">
+                        <img src="img/howWeWorkSection/what.svg" alt="whatIcon" class="howwework__waterMark howwework__waterMark_3">
+                    </a>
+                </div>
+                <div class="howwework__block">
+                    <div class="howwework__together">
+                        <div class="howwework__step">ШАГ №8</div>
+                        <!-- <img src="img/howWeWorkSection/arrow.svg" alt="arrow" class="howwework__arrow"> -->
+                    </div>
+                    <img src="img/howWeWorkSection/8card.svg" alt="8card" class="howwework__img">
+                    <div class="howwework__block_title">
+                        Строительство<br>новых складов
+                    </div>
+                    <div class="howwework__block_subtitle">
+                        Как только локация заполняется до 75%, высылаем<br>предложение инвесторам<br>и строим новые склады
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="calculation">
+        <div class="container">
+            <div class="calculation__mainTitle">Как происходит<br>инвестирование?</div>
+            <div class="calculation__blocks">
+                <div class="calculation__block">
+                    <img src="img/calculationSection/mainImg.png" alt="mainImg" class="calculation__img">
+                    <div class="calculation__title">
+                        Процентная ставка считается от общего<br>количества контейнеров у одного инвестора.
+                    </div>
+                    <hr class="calculation__line">
+                    <div class="calculation__ml92px">
+                        <div class="calculation__subtitle">
+                            Например
+                        </div>
+                        <div class="calculation__descr">
+                            Купив 1 контейнер, возврат = 15%, через год ещё докупив<br>1 контейнер, возврат нового контейнера = 15,5%, через<br>ещё 2 года докупив 2 контейнера, возврат 16%
+                        </div>
+                    </div>
+                    <hr class="calculation__line calculation__line_mt26px">
+                </div>
+                <div class="calculation__block">
+                    <div class="calculation__items">
+                        <div class="calculation__item">
+                            <div class="calculation__nmb">
+                                1
+                            </div>
+                            <div class="calculation__text">
+                                После одобрения число контейнеров и локации,<br>по вашему желанию, мы присылаем фото контейнеров
+                            </div>
+                        </div>
+                        <div class="calculation__item">
+                            <div class="calculation__nmb">2</div>
+                            <div class="calculation__text">Мы заключаем договор купли-продажи<br>контейнера и сразу же договор долгосрочной<br>аренды, и Вы перечисляете средства</div>
+                        </div>
+                        <div class="calculation__item">
+                            <div class="calculation__nmb">3</div>
+                            <div class="calculation__text">Вы получаете первую прибыль <span>уже за второй</span><br><span>месяц работы</span> вне зависимости от заполняемости</div>
+                        </div>
+                    </div>
+                    <div class="calculation__wall">
+                        <div class="calculation__wall_block">
+                            <div class="calculation__wall_title">Кол. контейнеров</div>
+                            <div class="calculation__wall_numbers">
+                                <div class="calculation__wall_number">1</div>
+                                <div class="calculation__wall_number">2-3</div>
+                                <div class="calculation__wall_number">4-5</div>
+                                <div class="calculation__wall_number">6-9</div>
+                                <div class="calculation__wall_number">10+</div>
+                            </div>
+                        </div>
+                        <div class="calculation__wall_block">
+                            <div class="calculation__wall_title">Возврат в год</div>
+                            <div class="calculation__wall_numbers">
+                                <div class="calculation__wall_number">15%</div>
+                                <div class="calculation__wall_number">15,5%</div>
+                                <div class="calculation__wall_number">16%</div>
+                                <div class="calculation__wall_number">16,5%</div>
+                                <div class="calculation__wall_number">17%</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="btn">Получить коммерческое предложение</div>
+                </div>
+            </div>
+
         </div>
     </section>
 </body>
