propertySection is done

--- a/index.html
+++ b/index.html
@@ -617,10 +617,154 @@
                             </div>
                         </div>
                     </div>
-                    <div class="btn">Получить коммерческое предложение</div>
+                    <a href="#" class="btn">Получить коммерческое предложение</a>
                 </div>
             </div>
 
+        </div>
+    </section>
+
+    <section class="preperty">
+        <div class="container">
+            <div class="property__title">
+                У вас в собственности<br><span>ликвидный актив</span>
+            </div>
+            <div class="property__blocks">
+                <div class="property__block1">
+                    <div class="property__item">
+                        <div class="property__together">
+                            <img src="img/propertySection/1img.svg" alt="1img" class="property__item_img">
+                            <div class="property__item_title">
+                                Каждый контейнер<br>имеет свой ID
+                            </div>
+                        </div>
+                        <div class="property__item_subtitle">
+                            У каждого контейнера внутри<br>и снаруже свой уникальный ID. В договоре<br>купли-продажи мы вписываем этот номер.
+                        </div>
+                    </div>
+                    <div class="property__item">
+                        <div class="property__together">
+                            <img src="img/propertySection/2img.svg" alt="2img" class="property__item_img">
+                            <div class="property__item_title">
+                                Можно продать
+                            </div>
+                        </div>
+                        <div class="property__item_subtitle">
+                            Если у Вас поменялись планы, Вы можете предложить выкупить контейнер у нас.<br>Мы предложим выкуп другим инвесторам<br>или рассмотрим покупку сами.
+                        </div>
+                    </div>
+                    <div class="property__item">
+                        <div class="property__together">
+                            <img src="img/propertySection/3img.svg" alt="3img" class="property__item_img">
+                            <div class="property__item_title">
+                                Вы знаете точное<br>расположение<br>контейнера
+                            </div>
+                        </div>
+                        <div class="property__item_subtitle">
+                            Мы ставим контейнер на территорию которой адрес указан в договоре аренды между нами и вами. Мы не меняем эту локацию и у Вас есть доступ к этой территории
+                        </div>
+                    </div>
+                </div>
+                <div class="property__block2">
+                    <div class="property__item">
+                        <div class="property__together">
+                            <img src="img/propertySection/4img.svg" alt="5img" class="property__item_img">
+                            <div class="property__item_title">
+                                Видеонаблюдения<br>на территории
+                            </div>
+                        </div>
+                        <div class="property__item_subtitle">
+                            Мы оснащаем наши склады 24/7 <br> видеонаблюдением. Мы вам даем <br> доступ к камерам углы которых<br>попадают ваши контейнеры
+                        </div>
+                    </div>
+                    <div class="property__item">
+                        <div class="property__together">
+                            <img src="img/propertySection/5img.svg" alt="5img" class="property__item_img">
+                            <div class="property__item_title">
+                                Высокий спрос<br>на контейнеры
+                            </div>
+                        </div>
+                        <div class="property__item_subtitle">
+                            Активно развивается контейнерское строительство. Порочные конструкции<br>контейнера переделывают в дома,<br>офисы, торговые точки и склады
+                        </div>
+                    </div>
+                    <img src="img/propertySection/mobile.png" alt="mobileOnCenter" class="property__mainImg">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="pension">
+        <div class="container">
+            <div class="pension__title">
+                Пожизненная пенсия
+            </div>
+            <div class="pension__subtitle">
+                Получайте поссивный доход всю жизнь, потому-что:
+            </div>
+            <div class="pension__blocks">
+                <div class="pension__block pension__block_1">
+                    <div class="pension__item pension__item_1">
+                        <div class="pension__text">Мы работаем в антикризисной сфере</div>
+                    </div>
+                    <div class="pension__item pension__item_2">
+                        <div class="pension__text">
+                            <p>
+                                Наша точка безубыточности по отношению<br>
+                                к заполняемости низка - у нас не большие затраты.
+                            </p>
+                            <p>
+                                К тому же по статистике в среднем из всех<br>складов самообслуживани, те у кого заполняемость<br>ниже 50%, всего 4%
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="pension__block pension__block_2">
+                    <div class="pension__item pension__item_3">
+                        <div class="pension__text">
+                            <p>
+                                Производители контейнеров гарантирует срок службы контейнера 50 лет. Это в суровых условиях в море где есть соль, вода и постоянные разгрузки.
+                            </p>
+                            <p>
+                                К тому же по статистике в среднем из всех складов самообслуживани, те у кого заполняемость ниже 50%, всего 4%
+                            </p>
+                        </div>
+                    </div>
+                    <div class="pension__item pension__item_4">
+                        <div class="pension__text">Хранения вещей актуально всегда и спрос только растет. Рост заполняемости складов и появления новых складов ежегодно подтверждает тренд</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="sphere">
+        <div class="container">
+            <div class="sphere__title">
+                Устойчивая сфера<br>даже в кризис
+            </div>
+            <div class="sphere__blocks">
+                <div class="sphere__block">
+                    <img src="img/sphereSection/1img.png" alt="1imgSphereSection" class="sphere__img">
+                    <div class="sphere__subtitle">При росте экономики</div>
+                    <div class="sphere__descr">
+                        <p>
+                            С ростом э-комерции у людей все меньше<br>свободного пространства для хранения всех вещей.
+                        </p>
+                        <p>
+                            С ростом бизнеса, компании ищут новые складские<br>помещения для товара и оборудования.
+                        </p>
+                    </div>
+                    
+                </div>
+                <div class="sphere__block">
+                    <img src="img/sphereSection/2img.png" alt="2imgSphereSection" class="sphere__img">
+                    <div class="sphere__subtitle">В случае кризиса</div>
+                    <div class="sphere__descr">
+                        Люди и компании начинают экономить и переезжают в более маленькие площад (квартиры, офисы). Лишнего места для всех вещей не остается и они в поиске склада для хранения вещей по выгодной цене
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
